name:                cache-s3
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fpco/cache-s3#readme
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@fpcomplete.com
copyright:           FP Complete
category:            AWS
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.AWS.S3.Cache
  other-modules:       Network.AWS.S3.Cache.Local
                     , Network.AWS.S3.Cache.Remote
                     , Network.AWS.S3.Cache.Types
                     , Network.AWS.S3.Cache.Stack
  build-depends:       aeson
                     , amazonka
                     , amazonka-core
                     , amazonka-s3
                     , amazonka-s3-streaming
                     , base >= 4.7 && < 5
                     , base64-bytestring
                     , bytestring
                     , conduit >= 1.2.8
                     , conduit-extra
                     , cryptonite
                     , cryptonite-conduit
                     , directory >= 1.3.0.0
                     , exceptions
                     , filepath
                     , formatting
                     , git
                     , http-types
                     , lens
                     , lz4-conduit
                     , memory
                     , monad-control
                     , monad-logger
                     , mtl
                     , process
                     , resourcet
                     , tar-conduit
                     , temporary-resourcet
                     , text
                     , time
                     , transformers >= 0.5.2.0
                     , unordered-containers
                     , vector >= 0.12.0.0
                     , yaml
  default-language:    Haskell2010
  ghc-options:         -Wall

executable cache-s3
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       amazonka
                     , amazonka-s3
                     , attoparsec
                     , base
                     , cache-s3
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpco/cache-s3
