name:                cache-s3
version:             0.1.8
synopsis:            Use an AWS S3 bucket for caching your stack build environment.
description:         Save local directories to S3 bucket and restore them later to their
                     original locations. Designed for stack usage during CI, but can be
                     used with other tools and for other purposes.
homepage:            https://github.com/fpco/cache-s3#readme
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@fpcomplete.com
copyright:           FP Complete
category:            AWS
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.AWS.S3.Cache
                     , Network.AWS.S3.Cache.Local
  other-modules:       Network.AWS.S3.Cache.Remote
                     , Network.AWS.S3.Cache.Types
                     , Network.AWS.S3.Cache.Stack
                     , Paths_cache_s3
  build-depends:       aeson
                     , amazonka
                     , amazonka-core
                     , amazonka-s3
                     , amazonka-s3-streaming
                     , attoparsec
                     , base >= 4.7 && < 5
                     , base64-bytestring
                     , bytestring
                     , conduit >= 1.2.8
                     , conduit-extra
                     , cryptonite
                     , cryptonite-conduit
                     , directory >= 1.3.0.0
                     , safe-exceptions
                     , fast-logger >= 2.1.0
                     , filepath
                     , git
                     , http-types
                     , lens
                     , memory
                     , monad-control
                     , monad-logger
                     , mtl
                     , process
                     , resourcet
                     , tar-conduit >= 0.2.0
                     , text
                     , time
                     , transformers >= 0.5.2.0
                     , unordered-containers
                     , unliftio
                     , vector >= 0.12.0.0
                     , yaml
  default-language:    Haskell2010
  ghc-options:         -Wall
  if os(windows)
      cpp-options:   -DWINDOWS
  else
      build-depends: lz4-conduit


executable cache-s3
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded
  build-depends:       amazonka
                     , amazonka-s3
                     , attoparsec
                     , base
                     , cache-s3
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Spec.hs
  other-modules:      Network.AWS.S3.Cache.LocalSpec
  build-depends:      base            >= 4.7 && < 5
                    , cache-s3
                    , hspec
                    , filepath
                    , QuickCheck

  default-language:   Haskell2010
  ghc-options:        -Wall -threaded


source-repository head
  type:     git
  location: https://github.com/fpco/cache-s3
